# sk2-wordle

./: .dockerignore  .gitignore  CMakeLists.txt  DEBUG.md  Error.cpp  Error.h  Result.h  client_test.cpp  conf.json  debug.sh  docker-compose.yml  dockerfile  logger.cpp  logger.h  main.cpp  run.sh  run_client_test.sh  run_server_test.sh  server_test.cpp  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_pool.cpp  todo
.cache/clangd/index/: Error.cpp.FD0961180246EE4A.idx  Error.h.F6E85ADB343D8F22.idx  Result.cpp.3A25BEEA0583F29C.idx  Result.h.DDFF414EFE0569A1.idx  client_test.cpp.CA6EF811BCF99373.idx  logger.cpp.AD568F35FD85203B.idx  logger.h.40CD898A1E7D5345.idx  main.cpp.516A36F05028B933.idx  server_test.cpp.A12095DE8875C8FA.idx  tcp_client.cpp.26475018B79496B8.idx  tcp_client.h.1B5CFF45D8080EF4.idx  tcp_server.cpp.C453535DF259C6C7.idx  tcp_server.h.5A4EB373EA7575AD.idx  (+2 more)
artifacts/: client_test.cpp  tcp_client.cpp  tcp_client.h  tcp_client.js
client/: README.md  dockerfile  package-lock.json  package.json  tcp_client.js
client/src/: App.tsx  index.css  main.tsx
client/src/context/: index.ts  (+2 more)
logic/: endpoints.cpp  endpoints.h  game.cpp  game.h  game_state.cpp  game_state.h  guesses.cpp  guesses.h  player.cpp  player.h  round.cpp  round.h  vote.cpp  vote.h  word.cpp  word.h  word_method.cpp  word_method.h  word_request.cpp  word_request.h  wordle_types.h  wordle_word.cpp  wordle_word.h
logic/endpoints/: endpoints.cpp  endpoints.h  mock_endpoints.cpp  mock_endpoints.h  request_bodies.cpp  request_bodies.h
logic/mocks/: mock_endpoints.cpp
postman/: MockEndpoints.local.postman_environment.json  MockEndpoints.postman_collection.json
proxy/: README.md  http_proxy.ts  package-lock.json  package.json  tsconfig.json  ws_proxy.ts
server/: request_body.cpp  request_body.h  router.cpp  router.h  server_method.cpp  server_method.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_pool.cpp
server/cron/: cron.cpp  cron.h
server/http/: http.cpp  http.h  http_enums.cpp  http_enums.h  http_header.cpp  http_header.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  request_body.cpp  request_body.h  router.cpp  router.h  server_method.cpp
server/server/: router.cpp  router.h  server_method.cpp  server_method.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_pool.cpp  thread_pool.h
server/utils/: config.cpp  config.h  error.cpp  error.h  global_state.h  logger.cpp  logger.h  result.cpp  result.h
server/web-socket/: handshake.cpp  handshake.h  handshake_mask.h  web_socket_connection.cpp  web_socket_connection.h  web_socket_frame.cpp  web_socket_frame.h  web_socket_pool.cpp  web_socket_pool.h  web_socket_server.cpp  web_socket_server.h
utils/: error.cpp  logger.cpp  logger.h  result.h
(+20 files in other folders)
